# r2d2-ai

./: .gitignore  CMakeLists.txt  mct_project_info.json
docs/: master-plan.md  research-web-links.md
docs/hardware/: power-plan.md
docs/software/: sound-fx.md  speech-to-text.md
src/cpp/: CMakeLists.txt
src/cpp/core/: CMakeLists.txt  core.cpp  core.h
src/cpp/runtime/: CMakeLists.txt  main.cpp
src/py/: ctype_test.py
